--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=8082
+server.error.include-stacktrace=never
+server.servlet.context-path=/api
+spring.application.name=irrigation
+spring.datasource.username=root
+spring.datasource.password=302213010
+spring.datasource.url=jdbc:mysql://localhost:3306/irrigation
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
+
+
+
+irrigation.speed=4
+irrigation.process.check.interval=60000
+max.sensor.retries=4
